Arraylist tilbage til forside knap

--- a/src/main/resources/templates/opskrifter.html
+++ b/src/main/resources/templates/opskrifter.html
@@ -9,7 +9,7 @@
 <div class="container">
 
     <form id="forside-form" action="/removeOpskrifter" method="post">
-        <input type="button" value="Tilbage til forsiden" onclick="history.back(-1)">
+        <input type="submit" value="Tilbage til forsiden">
     </form>
 
     <div class="row">
