--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="index-background">
         <div class="row">
             <div class="col">
 
@@ -14,17 +14,18 @@
                     <form id="køleskabs-form" action="/lager" method="post">
                         <label for="ingrediens">Ingrediens</label>
                         <input type="text" id="ingrediens" name="ingrediens"><br><br>
-                        <input type="submit" value="Tilføj til dine ingredienser">
+                        <input type="submit" id="submit-form" value="Tilføj til dine ingredienser">
                     </form>
 
                     <form id="fortryd-form" action="/removeLastFromLager" method="post">
                         <input type="submit" value="Fortryd seneste tilføjelse">
                     </form>
+
                 </div>
 
             </div>
 
-            <div class="col">
+            <div class="col" id="listLager">
                 <h4>Dine ingredienser</h4>
                 <div th:each="listLager : ${ingrediens}">
                     <h th:text="${listLager}" />
@@ -38,7 +39,6 @@
 
                 <div id="opskrift-container">
                     <form id="opskrift-form" action="/addOpskrifter" method="post">
-                        <h4>Find opskrifter!</h4>
                         <input type="submit" value="Find mulige opskrifter!">
                     </form>
                 </div>
