--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,14 @@
 
                 </div>
 
+                <div id ="text-container">
+                    <label text="forside-text">Velkommen til Madspild.dk <br>
+                        verdens førende side indenfor madspilds formindskelse</label>
+                </div>
+
             </div>
+
+
 
             <div class="col" id="listLager">
                 <h4>Dine ingredienser</h4>
