--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,9 +1,17 @@
+body {
+    background-image: url("BackgroundPhoto.jpg");
+    /*background-size: cover;*/
+    background-attachment: fixed;
+    width: 100%;
+    height: 100%;
+}
 #index-background {
     background: rgba(211, 211, 211, 0.6);
     padding: 30px;
     border:solid;
     border-width: 0.5px;
     height: 100%;
+
 }
 #text-container{
     font-size: 2em;
