Hello Adam, i made ingredient in bar yes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,8 @@
 
                 <div id="form-container">
                     <form id="køleskabs-form" action="/lager" method="post">
-                        <label for="ingrediens">Ingrediens</label>
-                        <input type="text" id="ingrediens" name="ingrediens"><br><br>
+                        <label for="ingrediens"></label>
+                        <input type="text" id="ingrediens" name="ingrediens" placeholder="Ingrediens..."><br><br>
                         <input type="submit" id="submit-form" value="Tilføj til dine ingredienser">
                     </form>
 
