--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,23 +1,24 @@
 body {
     background-image: url("BackgroundPhoto.jpg");
-    /*background-size: cover;*/
     background-attachment: fixed;
+    background-size:cover;
     width: 100%;
     height: 100%;
 }
 #index-background {
-    background: rgba(211, 211, 211, 0.6);
+    margin-top: 14%;
+    background: rgba(211, 211, 211, 0.3);
     padding: 30px;
-    border:solid;
-    border-width: 0.5px;
-    height: 100%;
 
 }
 #text-container{
+    text-weight: bold;
     font-size: 2em;
     padding: 30px;
 }
+
 #form-container {
+    font-weight: bold;
     padding: 30px;
     border:solid;
     border-width: 0.5px;
