--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -4,6 +4,7 @@ body {
     background-size:cover;
     width: 100%;
     height: 100%;
+
 }
 #index-background {
     margin-top: 14%;
@@ -13,21 +14,26 @@ body {
 }
 #text-container{
     text-weight: bold;
+    color: aliceblue;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: black;
     font-size: 2em;
     padding: 30px;
+
 }
 
 #form-container {
     font-weight: bold;
     padding: 30px;
-    border:solid;
-    border-width: 0.5px;
+
 
 }
 #listLager {
     padding: 30px;
-    border:solid;
-    border-width: 0.5px;
+    color: aliceblue;
+    font-size: 1.5em;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: black;
 }
 #fortryd-form {
     float: right;
