--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 
                 <div id ="text-container">
                     <label text="forside-text">Velkommen til Madspild.dk <br>
-                        verdens førende side indenfor madspilds formindskelse</label>
+                        verdens førende side indenfor formindskelse af madspild</label>
                 </div>
             </div>
 
