Added en masse opskrifter

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,8 @@
 
                 <div id ="text-container">
                     <label text="forside-text">Velkommen til Madspild.dk <br>
-                        verdens førende side indenfor formindskelse af madspild</label>
+                        verdens førende hjemmeside indenfor formindskelse af madspild! <br>
+                        Skriv de råvarer der er i dit køleskab for oven, så finder vores meget intelligente alogritme frem til retter, som DU kan lave med de ingredienser!</label>
                 </div>
             </div>
 
