--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -8,18 +8,18 @@ body {
 }
 #index-background {
     margin-top: 14%;
-    background: rgba(211, 211, 211, 0.3);
+    background: rgba(211, 211, 211, 0.6);
     padding: 30px;
     border: 3px solid green;
     border-radius: 5px 5px;
 
 }
 #text-container{
+    -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-color: black;
     text-weight: bold;
     color: aliceblue;
-    -webkit-text-stroke-width: 0.5px;
-    -webkit-text-stroke-color: black;
-    font-size: 2em;
+    font-size: 1.4em;
     padding: 30px;
 }
 
@@ -54,7 +54,7 @@ body {
 
 #opskrift-form {
     float: right;
-    margin-right: 31.25%;
+    /* margin-right: 31.25%; */
     border: 3px solid grey;
     border-radius: 5px 5px;
     background: aliceblue;
