--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
                 <div id ="text-container">
                     <label text="forside-text">Velkommen til Madspild.dk <br>
                         verdens førende hjemmeside indenfor formindskelse af madspild! <br>
-                        Skriv de råvarer der er i dit køleskab for oven, så finder vores meget intelligente alogritme frem til retter, som DU kan lave med de ingredienser!</label>
+                        Skriv de råvarer der er i dit køleskab for oven, så finder vores meget intelligente algoritme frem til retter, som DU kan lave med de ingredienser!</label>
                 </div>
             </div>
 
